# T212_Spending_Analyser

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: schema.md  synthetic_transactions.csv  synthetic_transactions_sample.csv
scripts/: print_kpis.py  regenerate_minimal_csv.py
src/: __init__.py  features.py  insights.py  summarize.py  synth.py  utils.py  viz.py
tests/: test_scaffold.py
