[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spending-analyser"
version = "0.1.0"
description = "Stage 0 scaffold for the Spending Analyser Streamlit application."
readme = "README.md"
authors = [{ name = "Spending Analyser Team" }]
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.38",
  "pandas>=2.2",
  "numpy>=1.26",
  "plotly>=5.23",
  "altair>=5.0",
  "scikit-learn>=1.4",
  "openai>=1.43",
]

[project.optional-dependencies]
dev = [
  "black>=24.4",
  "ruff>=0.6",
  "pytest>=8.3",
  "pre-commit>=3.7",
]

[tool.black]
line-length = 100
preview = true
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app.py", "src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "TID"]
ignore = ["E203", "E501", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
